@@ -9,7 +9,7 @@ AC_DEFUN([CF_CHECK_PYTHON],
 	PY_INCLUDES=""
 	dir=""
 	if test "x$PYTHON_HOME" != "x"; then
-		for dir in $PYTHON_HOME/include/python{,2.6,2.5,2.4,3.0,3.1} ; do
+		for dir in $PYTHON_HOME/include/python{,2.7,2.6,2.5,2.4,3.1,3.0} ; do
 			AC_CHECK_HEADERS(["$dir/Python.h"],[cf_have_python_h=yes])
 			if test "x$cf_have_python_h" != "x" ; then
 				PY_INCLUDES="-I$dir"
@@ -20,7 +20,7 @@ AC_DEFUN([CF_CHECK_PYTHON],
 	else
 		AC_CHECK_HEADERS([Python.h],[cf_have_python_h=yes])
 		if test "x$cf_have_python_h" = "x"  ; then
-			for dir in  /usr{,/local}/include/python{,2.6,2.5,2.4,3.0,3.1} ; do
+			for dir in  /usr{,/local}/include/python{,2.7,2.6,2.5,2.4,3.1,3.0} ; do
 				AC_CHECK_HEADERS(["$dir/Python.h"],[cf_have_python_h=yes])
 				if test "x$cf_have_python_h" != "x" ; then
 					PY_INCLUDES="-I$dir"
@@ -64,7 +64,7 @@ AC_DEFUN([CF_CHECK_PYTHON],
 			fi
 
 		else
-			for lib in python{,2.6,2.5,2.4,3.0,3.1} ; do
+			for lib in python{,2.7,2.6,2.5,2.4,3.1,3.0} ; do
 				AC_CHECK_LIB($lib, PyArg_ParseTuple,[PYTHON_LIB="-l$lib"])
 				if test "x$PYTHON_LIB" != "x" ; then
 					break
