@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Enable Python 2.7 to be used. Prefer 3.1 over 3.0.
+Arvid Norlander 2010-10-24
+
 Remove 'Fontindex' type and use 'uint16', for coherence.
 Nicolas Weeger 2010-10-24
 
